update parent pom version 3.0