@@ -50,10 +50,10 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		
-		<!-- property to be used for add opens jvm arguments in plugins -->
-		<java.17.addopens>--add-opens java.base/java.util=ALL-UNNAMED
-			--add-opens java.base/java.lang=ALL-UNNAMED
-		</java.17.addopens>
+<!--		&lt;!&ndash; property to be used for add opens jvm arguments in plugins &ndash;&gt;-->
+<!--		<java.17.addopens>&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED-->
+<!--			&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
+<!--		</java.17.addopens>-->
 		
 		<version.junit>5.7.0</version.junit>
 
